// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-native-dual suite should render DualFlatList with bouncer props 1`] = `
<RCTScrollView
  ListHeaderComponent={[Function]}
  contentContainerStyle={Object {}}
  contentInset={
    Object {
      "top": -667,
    }
  }
  contentOffset={
    Object {
      "y": 667,
    }
  }
  data={
    Array [
      Object {
        "key": 0,
      },
      Object {
        "key": 1,
      },
      Object {
        "key": 2,
      },
      Object {
        "key": 3,
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "backgroundColor": "#3498db",
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#2980b9",
              "height": 667,
            }
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        0
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        1
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        2
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        3
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`react-native-dual suite should render DualListView with bouncer props 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  contentInset={
    Object {
      "top": -667,
    }
  }
  contentOffset={
    Object {
      "y": 667,
    }
  }
  dataSource={
    ListViewDataSource {
      "items": 4,
    }
  }
  renderHeader={[Function]}
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  style={
    Object {
      "backgroundColor": "#3498db",
    }
  }
>
  <View>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#8e44ad",
            "height": 667,
          }
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      0
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      2
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      3
    </Text>
  </View>
</RCTScrollView>
`;

exports[`react-native-dual suite should render DualScrollView with bouncer props 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  contentInset={
    Object {
      "top": -667,
    }
  }
  contentOffset={
    Object {
      "y": 667,
    }
  }
  style={
    Object {
      "backgroundColor": "#3498db",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#16a085",
          "height": 667,
        }
      }
    />
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Cool header
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        With different background
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 0
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 1
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 2
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 3
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 4
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 5
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 6
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 7
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 8
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 9
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 10
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 11
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 12
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 13
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 14
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 15
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 16
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 17
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 18
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 19
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Item 20
    </Text>
  </View>
</RCTScrollView>
`;

exports[`react-native-dual suite should render DualSectionList with bouncer props 1`] = `
<RCTScrollView
  ItemSeparatorComponent={undefined}
  ListHeaderComponent={[Function]}
  contentContainerStyle={Object {}}
  contentInset={
    Object {
      "top": -667,
    }
  }
  contentOffset={
    Object {
      "y": 667,
    }
  }
  data={
    Array [
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "A",
      },
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "B",
      },
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "C",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onViewableItemsChanged={undefined}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "A",
      },
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "B",
      },
      Object {
        "data": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
        "title": "C",
      },
    ]
  }
  stickyHeaderIndices={
    Array [
      1,
      10,
    ]
  }
  stickySectionHeadersEnabled={true}
  style={
    Object {
      "backgroundColor": "#3498db",
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#c0392b",
              "height": 667,
            }
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Section Header 
          A
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        0
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        1
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        2
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        3
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        4
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        5
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        6
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Section Header 
          B
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;
